--- a/lab-sql-query-from-table-names-continued.ipynb
+++ b/lab-sql-query-from-table-names-continued.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "5334f942",
    "metadata": {
     "id": "5334f942"
@@ -193,8 +193,7 @@
     "  ]\n",
     "}\n",
     "\n",
-    "})\n",
-    "\n",
+    "third table:\n",
     "{\n",
     "  \"tablename\": \"studies\",\n",
     "  \"fields\": [\n",
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993",
    "metadata": {
     "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993"
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "b90f417a",
    "metadata": {
     "id": "b90f417a"
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "59e8202c-ce34-487e-9037-c65a263423ed",
    "metadata": {
     "colab": {
@@ -335,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "9c4766b1-48a9-456e-bc6c-4b6f41909aa4",
    "metadata": {
     "colab": {
@@ -351,13 +350,12 @@
      "text": [
       "This is your SQL:\n",
       "```sql\n",
-      "SELECT e.name\n",
-      "FROM employees e\n",
-      "JOIN studies s ON e.ID_usr = s.ID_usr\n",
-      "WHERE s.educational_level = 4;\n",
+      "SELECT * \n",
+      "FROM employees \n",
+      "WHERE ID_usr IN (SELECT ID_usr FROM studies WHERE educational_level = 4);\n",
       "```\n",
       "\n",
-      "This SQL query selects the names of employees from the \"employees\" table who have an educational level of 4. It achieves this by joining the \"employees\" table with the \"studies\" table on the ID_usr field and filtering the results based on the educational_level field being equal to 4.\n"
+      "This SQL query selects all employees from the \"employees\" table whose ID_usr is associated with an educational level of 4 in the \"studies\" table.\n"
      ]
     }
    ],
@@ -369,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "38d8d370-0524-4a28-bd54-5e5cddb08e2c",
    "metadata": {
     "colab": {
@@ -396,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "5aa318d4-dd9f-41db-8ff4-c1d87220f766",
    "metadata": {
     "colab": {
@@ -415,7 +413,7 @@
       "SELECT * FROM salary WHERE ID_usr = 2;\n",
       "```\n",
       "\n",
-      "Explanation: The SQL command selects all the records from the \"salary\" table where the \"ID_usr\" is equal to 2, providing the salary history of the employee with ID 2.\n"
+      "Explanation: The SQL command selects all the records from the \"salary\" table where the \"ID_usr\" is equal to 2, showing the salary history of the employee with ID 2.\n"
      ]
     }
    ],
@@ -448,6 +446,7 @@
    "outputs": [],
    "source": [
     "context = [ {'role':'system', 'content':\"\"\"\n",
+    "first table:\n",
     "{\n",
     "  \"tablename\": \"instructors\",\n",
     "  \"fields\": [\n",
@@ -474,6 +473,7 @@
     "  ]\n",
     "}\n",
     "\n",
+    "second table:\n",
     "{\n",
     "  \"tablename\": \"enrollments\",\n",
     "  \"fields\": [\n",
@@ -499,6 +499,8 @@
     "    }\n",
     "  ]\n",
     "}\n",
+    "\n",
+    "third table:\n",
     "{\n",
     "  \"tablename\": \"courses\",\n",
     "  \"fields\": [\n",
